# Pac-Man

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: game.c  game.h  input.c  input.h  main.c  map.h  physics.c  physics.h
