cmake_minimum_required(VERSION 3.7.2)
project(96109855)

set(CMAKE_C_STANDARD 99)
set(SOURCE src/main.c src/physics.c src/game.c src/input.c)
add_executable(96109855 ${SOURCE})
include_directories(src)
include_directories(/usr/include/SDL2)
target_link_libraries(96109855 m SDL2 SDL2_gfx)
add_definitions(-D_REENTRANT)